--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,8 @@
 /*AJUSTES PRIMARIOS*/
 
 body{
-  margin-top: 23px;
     background-color:#c1def1;
-    padding-bottom: 60px;
-    padding-top: 60px;
+    margin-bottom: 60px;
 }
 h1{
     color: #18bac0;
@@ -34,7 +32,7 @@ h3{
 
 .header{
     background-color: #18bac0;
-    align-items: center;
+    align-items:center;
     padding-bottom: auto;
     margin-bottom: auto;
     flex-direction: column;
